# Mutimodal-cucumber-irrigation-agent-system

./: .dockerignore  .env.example  .gitignore  DIRECTORY.md  PROJECT_DOCUMENTATION.md  README.md  cankao.html  cankao2.html  cankao3.html  cankao4.html  cankao5.html  config.ini  design_ui.md  docker-compose.registry.yml  docker-compose.yml  pyproject.toml  requirements_ui.md  start.sh  status.sh  stop.sh  task_ui.md
annotations/: DIRECTORY.md
backend/: DIRECTORY.md  Dockerfile  pyproject.toml  requirements-docker.txt  requirements.txt
backend/app/: DIRECTORY.md  main.py
backend/app/api/: DIRECTORY.md
backend/app/api/v1/: DIRECTORY.md  __init__.py  chat.py  episodes.py  knowledge.py  memory.py  override.py  predict.py  settings.py  stats.py  upload.py  vision.py  weekly.py
backend/app/core/: DIRECTORY.md  __init__.py  config.py
backend/app/ml/: DIRECTORY.md
backend/app/ml/tsmixer/: DIRECTORY.md
backend/app/models/: DIRECTORY.md  __init__.py  schemas.py
backend/app/services/: DIRECTORY.md  __init__.py  episode_service.py  llm_service.py  memory_service.py  prediction_service.py  rag_service.py  tsmixer_service.py  weekly_summary_service.py  yolo_service.py
backend/data/: DIRECTORY.md
backend/data/csv/: DIRECTORY.md
backend/data/images/: DIRECTORY.md
backend/tests/: DIRECTORY.md  test_memory.py  test_predict.py
backend/ultralytics/: DIRECTORY.md
backend/ultralytics/assets/: DIRECTORY.md
backend/ultralytics/cfg/: DIRECTORY.md  default.yaml
backend/ultralytics/cfg/models/: DIRECTORY.md
backend/ultralytics/cfg/solutions/: DIRECTORY.md
backend/ultralytics/cfg/trackers/: DIRECTORY.md
backend/ultralytics/data/: DIRECTORY.md
backend/ultralytics/data/scripts/: DIRECTORY.md
backend/ultralytics/engine/: DIRECTORY.md  model.py  trainer.py
backend/ultralytics/hub/: DIRECTORY.md
backend/ultralytics/hub/google/: DIRECTORY.md
backend/ultralytics/models/: DIRECTORY.md
backend/ultralytics/models/fastsam/: DIRECTORY.md
backend/ultralytics/models/nas/: DIRECTORY.md
backend/ultralytics/models/rtdetr/: DIRECTORY.md
backend/ultralytics/models/sam/: DIRECTORY.md
backend/ultralytics/models/utils/: DIRECTORY.md
backend/ultralytics/models/yolo/: DIRECTORY.md
backend/ultralytics/nn/: DIRECTORY.md  tasks.py
backend/ultralytics/nn/modules/: DIRECTORY.md  attention.py  block.py  head.py
backend/ultralytics/solutions/: DIRECTORY.md
backend/ultralytics/trackers/: DIRECTORY.md
backend/ultralytics/utils/: DIRECTORY.md  checks.py  loss.py  metrics.py  torch_utils.py
(+321 files in other folders)
