[project]
name = "agriagent-backend"
version = "0.1.0"
description = "AgriAgent - 温室黄瓜灌水智能体系统后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0.0",
    # 数据处理
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # ML 模型
    "torch>=2.0.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "pillow>=10.4.0",
    # LLM
    "openai>=1.50.0",
    # 工具
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.9.0",
    "loguru>=0.7.2",
    "joblib>=1.4.0",
    "openpyxl>=3.1.5",
    "pymongo>=4.6.0",
    "scikit-learn>=1.5.0",
    "einops>=0.8.1",
    "timm>=1.0.22",
    "sahi>=0.11.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
